# lets_split

./: .gitignore  Cargo.toml  README.md  embed.toml  flake.nix
.cargo/: config.toml
src/: main.rs
tests/: integration.rs
