[package]
name = "lets_split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
stm32f4xx-hal = { version = "0.10", features = [ "rt", "stm32f411", "usb_fs" ] }
usb-device = "0.2"

keyboard-io = { path = "../keyboard-io/" }

[profile.release]
debug = 2
lto = true
